--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "android"]
 	path = android
 	url = https://github.com/JoaoFelipe/SleepingBeautyAndroid.git
+[submodule "website"]
+	path = website
+	url = https://github.com/xerek/sleepingbeauty.git
